--- a/index.html
+++ b/index.html
@@ -49,11 +49,14 @@
 <body>
     <div class="menu-container">
         <nav class="menu">
-            <a href="test1/index.html">Home</a>
-            <a href="test2/index.html">About</a>
-            <a href="#">Services</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Contact</a>
+            <a href="yulia-fin/lofd.html" target=_blank>Д. Юлия </a>
+            <a href="igor-fin/index.html" target=_blank>З. Игорь</a>
+            <a href="max-fin/index.html" target=_blank>К. Максим</a>
+            <a href="r-kirill-fin/index.html" target=_blank>Р. Кирилл</a>
+            <a href="danya-fin/pyroshop.html" target=_blank>С. Даниил</a>
+            <a href="sawa-fin/factorio.html" target=_blank>С. Александр</a>
+            <a href="f-kirill-fin/brawlstars.html" target=_blank>Ф. Кирилл</a>
+            <a href="yaroslav-fin/index.html" target=_blank>Ш. Ярослав</a>
         </nav>
     </div>
 </body></html>
