final final final

--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 <body>
     <div class="menu-container">
         <nav class="menu">
-            <a href="yulia-final/lofd.html" target=_blank>Д. Юлия </a>
+            <a href="yulia-final/index.html" target=_blank>Д. Юлия </a>
             <a href="igor-final/index.html" target=_blank>З. Игорь</a>
             <a href="max-fin/index.html" target=_blank>К. Максим</a>
             <a href="r-kirill-final/index.html" target=_blank>Р. Кирилл</a>
-            <a href="danya-final/pyroshop.html" target=_blank>С. Даниил</a>
-            <a href="sawa-final/factorio.html" target=_blank>С. Александр</a>
+            <a href="danya-final/index.html" target=_blank>С. Даниил</a>
+            <a href="sawa-final/index.html" target=_blank>С. Александр</a>
             <a href="f-kirill-final/brawlstars.html" target=_blank>Ф. Кирилл</a>
             <a href="yaroslav-fin/index.html" target=_blank>Ш. Ярослав</a>
         </nav>
